maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:74: error: ')' expected but ';' found.
	if(!aMurOuest(getX(); getY())){
                            ^JediEscaper:74: error: ';' expected but ')' found.
	if(!aMurOuest(getX(); getY())){
                                    ^